docs: Clarify Claude Code vs Claude Desktop configuration and remove unnecessary global install option
- Split configuration sections to distinguish Claude Code (CLI) from Claude Desktop (JSON config)
- Claude Code: Uses `claude mcp add` command, no restart needed
- Claude Desktop: Uses `claude_desktop_config.json` manual editing, requires restart
- Remove "install globally" option - provides no benefit for MCP servers (npx is recommended)
- Update GitHub release notes template with same clarifications

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -52,19 +52,17 @@ jobs:
             npx @nielspeter/sonarlint-mcp-server
             ```
 
-            Or install globally:
+            ## Configuration
 
-            ```bash
-            npm install -g @nielspeter/sonarlint-mcp-server
-            ```
-
-            ## Configure Claude Desktop
+            ### Claude Code
 
             ```bash
             claude mcp add --transport stdio sonarlint -- npx -y @nielspeter/sonarlint-mcp-server
             ```
 
-            Or manually add to `claude_desktop_config.json`:
+            ### Claude Desktop
+
+            Manually add to `claude_desktop_config.json`:
 
             ```json
             {
